:hamster: fixed skate and me overflow

--- a/css/site.css
+++ b/css/site.css
@@ -79,10 +79,10 @@ a.contact {
   top:10%;
 }
 .skate-text>.skate-text2 {
-  top:25%; 
+  top:30%; 
 }
 .skate-text>.skate-text3 {
-  top:40%;
+  top:50%;
 }
 
 .here:after {
